<resources>
    <string name="app_name">Tour Guide</string>
    <string name="lagos">Lagos</string>
    <string name="anambra">Anambra</string>
    <string name="abuja">Abuja</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lagos">LagosActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lagos_details"> "Lagos (Yoruba: Èkó) is a city in the Nigerian state of Lagos. The city, with its adjoining conurbation, is the most populous in Nigeria, and the most populous on the African continent. It is one of the fastest growing cities in the world and also one of the most populous urban agglomerations. Lagos is a major financial centre in Africa; the megacity has the highest GDP, and also houses one of the largest and busiest ports on the continent.

Lagos initially emerged as a port city that originated on a collection of islands, which are contained in the present day Local Government Areas (LGAs) of Lagos Island, Eti-Osa, Amuwo-Odofin and Apapa; the islands are separated by creeks, fringing the southwest mouth of Lagos Lagoon, while protected from the Atlantic Ocean by barrier islands and long sand spits such as Bar Beach, which stretch up to 100 km (60 mi) east and west of the mouth. Due to rapid urbanization, the city expanded to the west of the lagoon to include areas in the present day Lagos Mainland, Ajeromi-Ifelodun and Surulere. This led to the classification of Lagos into two main areas - the Island, which was the initial city of Lagos, before it expanded into the area known as the Mainland. This city area was governed directly by the Federal Government through the Lagos City Council, until the creation of Lagos State in 1967, which led to the splitting of Lagos city into the present day seven Local Government Areas (LGAs), and an addition of other towns (which now make up 13 LGAs) from the then Western Region, to form the state.

Lagos, the capital of Nigeria since its amalgamation in 1914, went on to become the capital of Lagos State after its creation. However, the state capital was later moved to Ikeja in 1976, and the federal capital moved to Abuja in 1991. Even though Lagos is still widely referred to as a city, the present day Lagos, also known as "Metropolitan Lagos", and officially as "Lagos Metropolitan Area" is an urban agglomeration or conurbation, consisting of 20 LGAs,32 LCDAs including Ikeja, the state capital of Lagos State. This conurbation makes up 37% of Lagos State's total land area, but houses about 85% of the state's total population.

The exact population of Metropolitan Lagos is disputed. In the 2006 federal census data, the conurbation had a population of about 8 million people". However, the figure was disputed by the Lagos State Government, which later released its own population data, putting the population of Lagos Metropolitan Area at approximately 16 million. As at 2015, unofficial figures put the population of "Greater Metropolitan Lagos", which includes Lagos and its surrounding metro area, extending as far as into Ogun State, at approximately 21 million." </string>
    <string name="abuja_details">"Abuja (/əˈbuːdʒə/) is the capital city of Nigeria located in the centre of the country within the Federal Capital Territory (FCT). It is a planned city and was built mainly in the 1980s, replacing the country's most populous city of Lagos as the capital on 12 December 1991. Abuja's geography is defined by Aso Rock, a 400-metre (1,300 ft) monolith left by water erosion. The Presidential Complex, National Assembly, Supreme Court and much of the city extend to the south of the rock. Zuma Rock, a 792-metre (2,598 ft) monolith, lies just north of the city on the expressway to Kaduna.

At the 2006 census, the city of Abuja had a population of 776,298, making it one of the ten most populous cities in Nigeria. According to the United Nations, Abuja grew by 139.7% between 2000 and 2010, making it the fastest growing city in the world. As of 2015, the city is experiencing an annual growth of at least 35%, retaining its position as the fastest-growing city on the African continent and one of the fastest-growing in the world. As at 2016, the metropolitan area of Abuja is estimated at six million persons, placing it behind only Lagos, as the most populous metro area in Nigeria.

Major religious sites include the Nigerian National Mosque and the Nigerian National Christian Centre. The city is served by the Nnamdi Azikiwe International Airport. Abuja is known for being one of the few purpose-built capital cities in Africa, as well as being one of the wealthiest.

Abuja is Nigeria's administrative and political centre. It is also a key capital on the African continent due to Nigeria's geo-political influence in regional affairs. Abuja is also a conference centre and hosts various meetings annually, such as the 2003 Commonwealth Heads of Government meeting and the 2014 World Economic Forum (Africa) meetings."</string>
    <string name="pick_destination">Pick A Destination !!</string>
    <string name="about">About</string>
    <string name="attractions">attractions</string>
    <string name="hotels">hotels</string>
</resources>